--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "formik": "^2.1.2",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.23.0",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
     "react-redux": "^7.1.3",
