--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
