--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/core": "^2.2.0",
     "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
@@ -19,6 +20,7 @@
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "formik": "^2.1.2",
+    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
